--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viaggio a Londra</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="./img/1.jpg" alt="London">
+        <img src="./img/2.jpg" alt="London">
+        <img src="./img/3.jpg" alt="London">
+        <hr>
+    </header>
 </body>
 </html>
