--- a/index.html
+++ b/index.html
@@ -14,5 +14,36 @@
         <img src="./img/3.jpg" alt="London">
         <hr>
     </header>
+    <main>
+        <h2>Le mie spese</h2>
+        <table>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>Totale</td>
+                <td></td>
+                <td>360€</td>
+            </tr>
+        </table>
+        <hr>
+    </main>
 </body>
 </html>
