--- a/index.html
+++ b/index.html
@@ -58,22 +58,28 @@
         <hr>
         <h2>Info utili:</h2>
         <ol>
-            <li>Numeri utili di Emergenza</li>
-            <ul>
-                <li><b>999</b> - Emergenza</li>
-                <li><b>101</b> - Numero polizia</li>
-                <li><b>111</b> - Numero assistenza medica</li>
-            </ul>
-            <li>Hotel</li>
-            <ul>
-                <li><b>Nome Hotel:</b> Buckingham Palace</li>
-                <li><b>Indirizzo Hotel:</b> Westminster, London SW1A1AA, Regno Unito</li>
-            </ul>
-            <li>Aereo</li>
-            <ul>
-                <li><b>Volo di Andata:</b> YI234X, ore 09.30 da Milano Malpensa</li>
-                <li><b>Volo di Ritorno:</b> YI236X, ore 18:30 da London Heathrow</li>
-            </ul>
+            <li>
+                Numeri utili di Emergenza            
+                <ul>
+                    <li><b>999</b> - Emergenza</li>
+                    <li><b>101</b> - Numero polizia</li>
+                    <li><b>111</b> - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>
+                Hotel
+                <ul>
+                    <li><b>Nome Hotel:</b> Buckingham Palace</li>
+                    <li><b>Indirizzo Hotel:</b> Westminster, London SW1A1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>
+                Aereo
+                <ul>
+                    <li><b>Volo di Andata:</b> YI234X, ore 09.30 da Milano Malpensa</li>
+                    <li><b>Volo di Ritorno:</b> YI236X, ore 18:30 da London Heathrow</li>
+                </ul>
+            </li>
         </ol>
         <hr>
     </main>
